# SEBBypass

./: BuildDebug.bat  BuildRelease.bat  CMakeLists.txt  README.md
src/: Main.cpp  Notepad.cpp  Notepad.h
src/hooks/: CallNextHookEx.cpp  Hooks.cpp  Hooks.h  NtQuerySystemInformation.cpp  SetWinEventHook.cpp  SetWindowDisplayAffinity.cpp  SetWindowsHookExA.cpp
src/utils/: Definitions.h
src/utils/hash/: fnv1a.h
